# ZKAT

./: .gitignore  README.md  pyproject.toml
docs/: milestone2.md  strategy.md
tests/: test_agent_workflow.py  test_controls.py  test_policy_engine.py
tests/chain/: test_chain.py
tests/data/: sample_nmap.xml
zkat/: __init__.py
zkat/agent/: __init__.py  canonicalize_nmap.py  email_anchor.py  git_anchor.py  pqc_sign.py  zkat_agent.py
zkat/agent/controls/: __init__.py  base.py  probes.py
zkat/chain/: __init__.py  log.py
zkat/schema/: attestation.schema.json
zkat/state/: chain_tip.json
zkat/verifier/: __init__.py  policy_engine.py  zkat_verify.py
