[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zkat"
version = "0.1.0"
description = "Zero-Knowledge Attestation Toolkit Milestone 1 scaffold"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "ZKAT Team"}]
dependencies = [
    "lxml",
    "gitpython",
    "oqs",
    "python-dateutil",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "jsonschema",
]

[project.urls]
Homepage = "https://example.com/zkat"
